# ROB2002

./: .gitignore  README.md  USAGE.md
.devcontainer/: Dockerfile  devcontainer.json  gazebo_ros_pkgs.repos  install.sh  lcas.repos  post-create.sh
.devcontainer/cuda-opengl/: devcontainer.json
.github/workflows/: container-build.yml  dev-container.yml  ros-ci.yml
evaluation/: comp_stats.py  iou_example.py  numpy_stats.py  odom_visualisation.py  rectangle.py
evaluation/ref_data/: head_size_gt.csv
rob2002_tutorial/: package.xml  setup.py
rob2002_tutorial/rob2002_tutorial/: counter_basic.py
src/Rob2002_development/: package.xml  setup.cfg  setup.py
src/Rob2002_development/Rob2002_development/: mover_basic.py  spinner.py
src/cmp9767_tutorial/: package.xml  setup.cfg  setup.py
src/cmp9767_tutorial/cmp9767_tutorial/: demo_inspection.py  detector_basic.py  image_projection_2.py
src/cmp9767_tutorial/maps/: my_map.pgm  my_map.yaml
src/cmp9767_tutorial/params/: nav2_params.yaml
src/cmp9767_tutorial/worlds/: custom_world.world
src/rob2002_tutorial/: package.xml  setup.cfg  setup.py
src/rob2002_tutorial/launch/: detect_count.launch.py
src/rob2002_tutorial/rob2002_tutorial/: counter_3d.py  counter_basic.py  detector_3d.py  detector_basic.py  detector_dblcounting.py  mover_basic.py  mover_laser.py  mover_spinner.py  mover_waypoints.py  rectangle.py
